# EDProjekt

./: input.txt  main.py  pyproject.toml  test_dane.txt  wygenerowane_dane.txt
src/: binary_vector.py  classify_panel.py  col_choice_window.py  data.py  load_panel.py  main_panel.py  op_panel.py  panel.py  preprocessing.py  preprocessing2.py  preprocessing_windows.py  read_data.py  table_frame.py  visual_panel.py
tests/: test_preprocessing.py
